1.9.3:
* Got rid of btc.MAX_BLOCK_SIZE (replaced it with btc.MAX_BLOCK_WEIGHT)
* Lib: New "utils.GetUnspent()" function to fetch a balance from "blockexplorer.com" or "blockchain.info"
* Tools/BalIO: Remade to use blockexplorer.com since blockr.io isn't working any more
* Client/WebUI/Blocks: Show fee statistics in relation to transactions' weight, not the size
* Client: NetRouteInv() was only routing txs to peers which don't use "feefilter"
* Wallet: decode transaction also shows WTxID now
* Lib: calculates weight of blocks and checks it against "btc.MAX_BLOCK_WEIGHT"

1.9.2 - 2017-09-30
* Minor performance improvements in "lib/secp256k1"
* Client: do nothing on "verack" messages
* Fixes of some DATA RACE warnings (not really dangerous ones, but just to shut up the race detector)
* Lib: protect cached hash fields with a mutex, within tx.WitnessSigHash()
* Client: Do not talk to peers that send any commands before "version"
* Client: Default value of "CFG.Net.MinSegwitCons" changed to 4
* Client: Do not drop segwit peers when connected ot less then CFG.Net.MinSegwitCons
* Client: When loading a local transaciton, remove it from Rejected first
* Client: Never send "inv" messages with MSG_WITNESS_TX type
* Client/WebUI/Txs: Allow sorting Txs by SegWit compression factor
* Client: the handler to chain.TrustedTxChecker also checks match on tx's WTxID now.
* Tools/bdb: new switch "-fixlen" to set up the uncompressed size of each block inside blockchain.new
* Client: BlocksDB index file contains now also the uncompressed size of each block
* Client/WebUI/Wallet: Export settings stores entire local storage
* Client/WextUI: "balance" command lists mempool transaction related to the given address
* Client/WebUI: POST to "balance.json?rawtx" returns the raw (originating) transaction for each output
* Wallet: Fix: "-f" was substracting the fee from every output's value, not only the first one